Training memory usage optimization

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -534,6 +534,10 @@
         "\n",
         "    :returns: accucary on the test set in the last epoch\n",
         "    \"\"\"\n",
+        "\n",
+        "    print(\"VGG.training = \", VGG.training)\n",
+        "    print(\"Speech2Face.training = \", model.training)\n",
+        "\n",
         "    for epoch in trange(epochs, desc=\"train epoch\"):\n",
         "        model.train()\n",
         "        train_loss_averager = make_averager()  # mantain a running average of the loss\n",
@@ -549,13 +553,13 @@
         "            # send to device\n",
         "            wav, img_normal = wav.to(device), img_normal.to(device)\n",
         "\n",
-        "            embedding = VGG(img_normal).to(device)\n",
+        "            embedding = VGG(img_normal)# .to(device)\n",
         "\n",
         "            if perm is not None:\n",
         "                data = permute_pixels(data, perm)\n",
         "\n",
         "            output = model(wav)\n",
-        "            loss = F.cross_entropy(output, embedding)\n",
+        "            loss = F.l1_loss(output, embedding)\n",
         "            loss.backward()\n",
         "            opt.step()\n",
         "            opt.zero_grad()\n",
@@ -567,6 +571,9 @@
         "                f\"train batch [avg loss: {train_loss_averager(None):.3f}]\"\n",
         "            )\n",
         "            tqdm_iterator.refresh()\n",
+        "\n",
+        "            del wav\n",
+        "            del img_normal\n",
         "\n",
         "        # TEST\n",
         "        # model.eval()\n",
@@ -622,13 +629,14 @@
         "colab": {}
       },
       "source": [
-        "# TODO: write trainig code\n",
         "vgg = vgg_face_dag(vgg_weights_path)\n",
+        "vgg.eval()\n",
         "vgg = vgg.to(device)\n",
+        "\n",
         "model = SpeechEncoder()\n",
         "model.to(device)\n",
         "optimizer = torch.optim.Adam(model.parameters())\n",
-        "datal = DataLoader(data, 32, True, num_workers=4)\n"
+        "datal = DataLoader(data, 4, True, num_workers=4)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -641,8 +649,7 @@
         "colab": {}
       },
       "source": [
-        "\n",
-        "fit(10, datal, model, vgg, optimizer, \"Speech2Face Training\")\n"
+        "fit(10, datal, model, vgg, optimizer, \"Speech2Face Training\")"
       ],
       "execution_count": null,
       "outputs": []
