--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -563,7 +563,7 @@
         "            loss.backward()\n",
         "            opt.step()\n",
         "            opt.zero_grad()\n",
-        "            print('here')\n",
+        "            #print('here')\n",
         "\n",
         "            train_loss_averager(loss.item())\n",
         "\n",
@@ -624,6 +624,25 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "lEyFPE9NBXYP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def l_distill(vgg_vf, vgg_vs):\n",
+        "  T = 2 \n",
+        "  \n",
+        "  def p_i(a, i):\n",
+        "    return (torch.exp(a[:,i]/T)) / torch.sum(torch.exp(a/T))\n",
+        "\n",
+        "  idx = arange(vgg_vf.shape[0])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "wE_p5eTAw0HD",
         "colab_type": "code",
         "colab": {}
@@ -636,7 +655,7 @@
         "model = SpeechEncoder()\n",
         "model.to(device)\n",
         "optimizer = torch.optim.Adam(model.parameters())\n",
-        "datal = DataLoader(data, 4, True, num_workers=4)\n"
+        "datal = DataLoader(data, 2, True, num_workers=4)\n"
       ],
       "execution_count": null,
       "outputs": []
