Created loss functions

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -11,8 +11,7 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -629,13 +628,17 @@
         "colab": {}
       },
       "source": [
-        "def l_distill(vgg_vf, vgg_vs):\n",
-        "  T = 2 \n",
-        "  \n",
-        "  def p_i(a, i):\n",
-        "    return (torch.exp(a[:,i]/T)) / torch.sum(torch.exp(a/T))\n",
+        "# taken from https://discuss.pytorch.org/t/is-this-loss-function-for-knowledge-distillation-correct/69863\n",
         "\n",
-        "  idx = arange(vgg_vf.shape[0])"
+        "def dist_loss(t, s):\n",
+        "  T = 2\n",
+        "  prob_t = F.softmax(t/T, dim=1)\n",
+        "  log_prob_s = F.log_softmax(s/T, dim=1)\n",
+        "  dist_loss = -(prob_t*log_prob_s).sum(dim=1)# .mean()\n",
+        "  return dist_loss\n",
+        "\n",
+        "def loss_2(vf, vs):\n",
+        "  return F.mse_loss(F.normalize(vf), F.normalize(vs))\n"
       ],
       "execution_count": null,
       "outputs": []
