--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -11,7 +11,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -164,6 +165,7 @@
         "        self.fc8 = nn.Linear(in_features=4096, out_features=2622, bias=True)\n",
         "\n",
         "    def forward(self, x0, is_fc8=False):\n",
+        "      if not is_fc8:\n",
         "        x1 = self.conv1_1(x0)\n",
         "        x2 = self.relu1_1(x1)\n",
         "        x3 = self.conv1_2(x2)\n",
@@ -202,11 +204,11 @@
         "        x35 = self.fc7(x34)\n",
         "        x36 = self.relu7(x35)\n",
         "        x37 = self.dropout7(x36)\n",
-        "        if is_fc8:\n",
-        "            x38 = self.fc8(x37)\n",
-        "        else:\n",
-        "            x38 = x37\n",
-        "        return x38\n",
+        "        x38 = x37\n",
+        "      else:\n",
+        "        x38 = self.fc8(x0)\n",
+        "\n",
+        "      return x38\n",
         "\n",
         "\n",
         "def vgg_face_dag(weights_path=None, **kwargs):\n",
@@ -219,10 +221,7 @@
         "    if weights_path:\n",
         "        state_dict = torch.load(weights_path)\n",
         "        model.load_state_dict(state_dict)\n",
-        "    return model\n",
-        "\n",
-        "\n",
-        "\n"
+        "    return model\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -537,6 +536,9 @@
         "    print(\"VGG.training = \", VGG.training)\n",
         "    print(\"Speech2Face.training = \", model.training)\n",
         "\n",
+        "    lambda1 = 0.025\n",
+        "    lambda2 = 200.0\n",
+        "\n",
         "    for epoch in trange(epochs, desc=\"train epoch\"):\n",
         "        model.train()\n",
         "        train_loss_averager = make_averager()  # mantain a running average of the loss\n",
@@ -558,7 +560,13 @@
         "                data = permute_pixels(data, perm)\n",
         "\n",
         "            output = model(wav)\n",
-        "            loss = F.l1_loss(output, embedding)\n",
+        "\n",
+        "            fvgg_s = VGG(output, True)\n",
+        "            fvgg_f = VGG(embedding, True)\n",
+        "\n",
+        "\n",
+        "            # loss = F.l1_loss(output, embedding)\n",
+        "            loss = F.l1_loss(output, embedding) + lambda1 * loss_2(output, embedding) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
         "            loss.backward()\n",
         "            opt.step()\n",
         "            opt.zero_grad()\n",
@@ -634,11 +642,12 @@
         "  T = 2\n",
         "  prob_t = F.softmax(t/T, dim=1)\n",
         "  log_prob_s = F.log_softmax(s/T, dim=1)\n",
-        "  dist_loss = -(prob_t*log_prob_s).sum(dim=1)# .mean()\n",
+        "  dist_loss = -(prob_t*log_prob_s).sum(dim=1).mean()\n",
         "  return dist_loss\n",
         "\n",
         "def loss_2(vf, vs):\n",
-        "  return F.mse_loss(F.normalize(vf), F.normalize(vs))\n"
+        "  return F.mse_loss(F.normalize(vf), F.normalize(vs))\n",
+        "  \n"
       ],
       "execution_count": null,
       "outputs": []
@@ -658,7 +667,7 @@
         "model = SpeechEncoder()\n",
         "model.to(device)\n",
         "optimizer = torch.optim.Adam(model.parameters())\n",
-        "datal = DataLoader(data, 2, True, num_workers=4)\n"
+        "datal = DataLoader(data, 3, True, num_workers=4)\n"
       ],
       "execution_count": null,
       "outputs": []
