Added saving of models

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -463,28 +463,13 @@
         "from typing import Optional, Callable\n",
         "from tqdm.notebook import tqdm, trange\n",
         "\n",
-        "\n",
-        "def permute_pixels(images: torch.Tensor, perm: Optional[torch.Tensor]) -> torch.Tensor:\n",
-        "    \"\"\" Permutes the pixel in each image in the batch\n",
-        "\n",
-        "    :param images: a batch of images with shape [batch, channels, w, h]\n",
-        "    :param perm: a permutation with shape [w * h]\n",
-        "\n",
-        "    :returns: the batch of images permuted according to perm\n",
-        "    \"\"\"\n",
-        "    if perm is None:\n",
-        "        return images\n",
-        "\n",
-        "    batch_size = images.shape[0]\n",
-        "    n_channels = images.shape[1]\n",
-        "    w = images.shape[2]\n",
-        "    h = images.shape[3]\n",
-        "    images = images.view(batch_size, n_channels, -1)\n",
-        "    images = images[..., perm]\n",
-        "    images = images.view(batch_size, n_channels, w, h)\n",
-        "    return images\n",
-        "\n",
-        "\n",
+        "def _save_model(epoch, model, optimizer, output_dir_name=\"/content/drive/My Drive/Speech2Face/models/speech_encoder/\"):\n",
+        "    torch.save({\n",
+        "        'epoch': epoch,\n",
+        "        'model_state_dict': model.state_dict(),\n",
+        "        'optimizer_state_dict': optimizer.state_dict(),\n",
+        "        }, join(output_dir_name, 'epoch_{}.pth'.format(epoch)))\n",
+        "    \n",
         "def make_averager() -> Callable[[Optional[float]], float]:\n",
         "    \"\"\" Returns a function that maintains a running average\n",
         "\n",
@@ -517,7 +502,6 @@
         "    VGG: torch.nn.Module, \n",
         "    opt: torch.optim.Optimizer,\n",
         "    tag: str,\n",
-        "    perm: Optional[torch.Tensor] = None,\n",
         "    device: str = \"cuda\",\n",
         ") -> float:\n",
         "    \"\"\" Train the model and computes metrics on the test_loader at each epoch\n",
@@ -556,13 +540,12 @@
         "\n",
         "            embedding = VGG(img_normal)# .to(device)\n",
         "\n",
-        "            if perm is not None:\n",
-        "                data = permute_pixels(data, perm)\n",
-        "\n",
         "            output = model(wav)\n",
         "\n",
         "            fvgg_s = VGG(output, True)\n",
         "            fvgg_f = VGG(embedding, True)\n",
+        "\n",
+        "            print(fvgg_s.shape)\n",
         "\n",
         "\n",
         "            # loss = F.l1_loss(output, embedding)\n",
@@ -609,21 +592,9 @@
         "            # f\"Test set: Average loss: {test_loss_averager(None):.4f}, \"\n",
         "            #f\"Accuracy: {correct}/{len(test_dl.dataset)} ({accuracy:.0f}%)\\n\"\n",
         "        )\n",
+        "        _save_model(epoch, model, optimizer, output_dir_name)\n",
         "    # models_accuracy[tag] = accuracy\n",
-        "    # return accuracy\n",
-        "\n",
-        "\n",
-        "def get_model_optimizer(model: torch.nn.Module) -> torch.optim.Optimizer:\n",
-        "    \"\"\"\n",
-        "    Encapsulate the creation of the model's optimizer, to ensure that we use the\n",
-        "    same optimizer everywhere\n",
-        "\n",
-        "    :param model: the model that contains the parameter to optimize\n",
-        "\n",
-        "    :returns: the model's optimizer\n",
-        "    \"\"\"\n",
-        "    return optim.Adam(model.parameters(), lr=0.001, weight_decay=1e-5)\n",
-        "    # return optim.SGD(model.parameters(), lr=0.01, momentum=0.1, weight_decay=1e-5)"
+        "    # return accuracy"
       ],
       "execution_count": null,
       "outputs": []
@@ -666,7 +637,7 @@
         "\n",
         "model = SpeechEncoder()\n",
         "model.to(device)\n",
-        "optimizer = torch.optim.Adam(model.parameters())\n",
+        "optimizer = torch.optim.AdamW(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
         "datal = DataLoader(data, 3, True, num_workers=4)\n"
       ],
       "execution_count": null,
