--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -47,7 +47,23 @@
         "colab": {}
       },
       "source": [
-        "! pip3 install face_recognition"
+        "! pip3 install face_recognition\n",
+        "! pip install --upgrade wandb\n",
+        "! wandb login f9cd4b35bf9733e5ead9d2b06e13ef2259b1284e"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m5FJW1pc-YZw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import wandb\n",
+        "wandb.init(project=\"speech2face\")\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -545,9 +561,6 @@
         "            fvgg_s = VGG(output, True)\n",
         "            fvgg_f = VGG(embedding, True)\n",
         "\n",
-        "            print(fvgg_s.shape)\n",
-        "\n",
-        "\n",
         "            # loss = F.l1_loss(output, embedding)\n",
         "            loss = F.l1_loss(output, embedding) + lambda1 * loss_2(output, embedding) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
         "            loss.backward()\n",
@@ -593,6 +606,8 @@
         "            #f\"Accuracy: {correct}/{len(test_dl.dataset)} ({accuracy:.0f}%)\\n\"\n",
         "        )\n",
         "        _save_model(epoch, model, optimizer, output_dir_name)\n",
+        "        torch.save(model.state_dict(), join(wandb.run.dir, 'model.pt'))\n",
+        "        wandb.log({\"Train set Average loss:\": train_loss_averager(None)})\n",
         "    # models_accuracy[tag] = accuracy\n",
         "    # return accuracy"
       ],
@@ -638,7 +653,9 @@
         "model = SpeechEncoder()\n",
         "model.to(device)\n",
         "optimizer = torch.optim.AdamW(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
-        "datal = DataLoader(data, 3, True, num_workers=4)\n"
+        "datal = DataLoader(data, 3, True, num_workers=4)\n",
+        "# W&B\n",
+        "wandb.watch(model)\n"
       ],
       "execution_count": null,
       "outputs": []
