Removed W&B due to memory usage problems. Added standard Adam optimizer. Model saving fix.

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -48,8 +48,8 @@
       },
       "source": [
         "! pip3 install face_recognition\n",
-        "! pip install --upgrade wandb\n",
-        "! wandb login f9cd4b35bf9733e5ead9d2b06e13ef2259b1284e"
+        "#! pip install --upgrade wandb\n",
+        "#! wandb login f9cd4b35bf9733e5ead9d2b06e13ef2259b1284e"
       ],
       "execution_count": null,
       "outputs": []
@@ -62,8 +62,8 @@
         "colab": {}
       },
       "source": [
-        "import wandb\n",
-        "wandb.init(project=\"speech2face\")\n"
+        "#import wandb\n",
+        "#wandb.init(project=\"speech2face\")\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -484,7 +484,7 @@
         "        'epoch': epoch,\n",
         "        'model_state_dict': model.state_dict(),\n",
         "        'optimizer_state_dict': optimizer.state_dict(),\n",
-        "        }, join(output_dir_name, 'epoch_{}.pth'.format(epoch)))\n",
+        "        }, join(output_dir_name, 'adam_epoch_{}.pth'.format(epoch)))\n",
         "    \n",
         "def make_averager() -> Callable[[Optional[float]], float]:\n",
         "    \"\"\" Returns a function that maintains a running average\n",
@@ -605,9 +605,9 @@
         "            # f\"Test set: Average loss: {test_loss_averager(None):.4f}, \"\n",
         "            #f\"Accuracy: {correct}/{len(test_dl.dataset)} ({accuracy:.0f}%)\\n\"\n",
         "        )\n",
-        "        _save_model(epoch, model, optimizer, output_dir_name)\n",
-        "        torch.save(model.state_dict(), join(wandb.run.dir, 'model.pt'))\n",
-        "        wandb.log({\"Train set Average loss:\": train_loss_averager(None)})\n",
+        "        _save_model(epoch, model, optimizer)\n",
+        "        #torch.save(model.state_dict(), join(wandb.run.dir, 'model.pt'))\n",
+        "        #wandb.log({\"Train set Average loss:\": train_loss_averager(None)})\n",
         "    # models_accuracy[tag] = accuracy\n",
         "    # return accuracy"
       ],
@@ -652,10 +652,14 @@
         "\n",
         "model = SpeechEncoder()\n",
         "model.to(device)\n",
-        "optimizer = torch.optim.AdamW(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
+        "\n",
+        "optimizer = torch.optim.Adam(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
+        "#optimizer_decay = torch.optim.AdamW(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
+        "#optimizer = optimizer_decay\n",
+        "\n",
         "datal = DataLoader(data, 3, True, num_workers=4)\n",
         "# W&B\n",
-        "wandb.watch(model)\n"
+        "#wandb.watch(model)\n"
       ],
       "execution_count": null,
       "outputs": []
