Added reproducibility stuff. Added code for checkpoint loading.

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -124,6 +124,24 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "YZEnesbYDawu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Reproducibility stuff\n",
+        "\n",
+        "import random\n",
+        "torch.manual_seed(42)\n",
+        "np.random.seed(42)\n",
+        "random.seed(0)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "cXILePzTdsI_",
         "colab_type": "code",
         "colab": {}
@@ -469,6 +487,32 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "wE_p5eTAw0HD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "vgg = vgg_face_dag(vgg_weights_path)\n",
+        "vgg.eval()\n",
+        "vgg = vgg.to(device)\n",
+        "\n",
+        "model = SpeechEncoder()\n",
+        "model.to(device)\n",
+        "\n",
+        "optimizer = torch.optim.Adam(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
+        "#optimizer_decay = torch.optim.AdamW(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
+        "#optimizer = optimizer_decay\n",
+        "\n",
+        "datal = DataLoader(data, 3, True, num_workers=4)\n",
+        "# W&B\n",
+        "#wandb.watch(model)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "082fWCi0rJG2",
         "colab_type": "code",
         "colab": {}
@@ -510,7 +554,6 @@
         "\n",
         "    return averager\n",
         "\n",
-        "\n",
         "def fit(\n",
         "    epochs: int,\n",
         "    train_dl: torch.utils.data.DataLoader,\n",
@@ -519,6 +562,7 @@
         "    opt: torch.optim.Optimizer,\n",
         "    tag: str,\n",
         "    device: str = \"cuda\",\n",
+        "    restart_epoch: int = 0,\n",
         ") -> float:\n",
         "    \"\"\" Train the model and computes metrics on the test_loader at each epoch\n",
         "\n",
@@ -536,10 +580,17 @@
         "    print(\"VGG.training = \", VGG.training)\n",
         "    print(\"Speech2Face.training = \", model.training)\n",
         "\n",
+        "    print(\"Starting training. Global epoch:\", restart_epoch)\n",
+        "\n",
         "    lambda1 = 0.025\n",
         "    lambda2 = 200.0\n",
         "\n",
         "    for epoch in trange(epochs, desc=\"train epoch\"):\n",
+        "        if restart_epoch != 0:\n",
+        "          epoch = restart_epoch\n",
+        "          restart_epoch = 0\n",
+        "          print(\"Epoch updated, current value:\", epoch)\n",
+        "\n",
         "        model.train()\n",
         "        train_loss_averager = make_averager()  # mantain a running average of the loss\n",
         "\n",
@@ -641,38 +692,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wE_p5eTAw0HD",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "vgg = vgg_face_dag(vgg_weights_path)\n",
-        "vgg.eval()\n",
-        "vgg = vgg.to(device)\n",
-        "\n",
-        "model = SpeechEncoder()\n",
-        "model.to(device)\n",
-        "\n",
-        "optimizer = torch.optim.Adam(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
-        "#optimizer_decay = torch.optim.AdamW(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
-        "#optimizer = optimizer_decay\n",
-        "\n",
-        "datal = DataLoader(data, 3, True, num_workers=4)\n",
-        "# W&B\n",
-        "#wandb.watch(model)\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "2jETsH8Nx7JU",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "fit(10, datal, model, vgg, optimizer, \"Speech2Face Training\")"
+        "check_path = \"/content/drive/My Drive/Speech2Face/models/speech_encoder/adam_epoch_2.pth\"\n",
+        "\n",
+        "def _load_checkpoint(checkpoint_path):\n",
+        "  checkpoint = torch.load(checkpoint_path)\n",
+        "  global_ep = checkpoint[\"epoch\"]\n",
+        "  model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
+        "  optimizer.load_state_dict(checkpoint[\"optimizer_state_dict\"])\n",
+        "  print(\"Loaded checkpoint, global epoch is: \", global_ep)\n",
+        "  return global_ep\n",
+        "\n",
+        "if check_path is not None:\n",
+        "  global_ep = _load_checkpoint(check_path)\n",
+        "\n",
+        "fit(10, datal, model, vgg, optimizer, \"Speech2Face Training\", restart_epoch=global_ep)"
       ],
       "execution_count": null,
       "outputs": []
