Disabled check_path to avoid mistakes

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -697,7 +697,7 @@
         "colab": {}
       },
       "source": [
-        "check_path = \"/content/drive/My Drive/Speech2Face/models/speech_encoder/adam_epoch_2.pth\"\n",
+        "check_path = None #\"/content/drive/My Drive/Speech2Face/models/speech_encoder/adam_epoch_2.pth\"\n",
         "\n",
         "def _load_checkpoint(checkpoint_path):\n",
         "  checkpoint = torch.load(checkpoint_path)\n",
