--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -707,6 +707,7 @@
         "  print(\"Loaded checkpoint, global epoch is: \", global_ep)\n",
         "  return global_ep\n",
         "\n",
+        "global_ep = 0\n",
         "if check_path is not None:\n",
         "  global_ep = _load_checkpoint(check_path)\n",
         "\n",
