--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -580,7 +580,7 @@
         "    print(\"VGG.training = \", VGG.training)\n",
         "    print(\"Speech2Face.training = \", model.training)\n",
         "\n",
-        "    print(\"Starting training. Global epoch:\", restart_epoch)\n",
+        "    print(\"Starting training. Restart epoch:\", restart_epoch)\n",
         "\n",
         "    lambda1 = 0.025\n",
         "    lambda2 = 200.0\n",
@@ -704,7 +704,7 @@
         "  global_ep = checkpoint[\"epoch\"]\n",
         "  model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
         "  optimizer.load_state_dict(checkpoint[\"optimizer_state_dict\"])\n",
-        "  print(\"Loaded checkpoint, global epoch is: \", global_ep)\n",
+        "  print(\"Loaded checkpoint, restart epoch is: \", global_ep)\n",
         "  return global_ep\n",
         "\n",
         "global_ep = 0\n",
