Dependencies refactoring. Added reproducibility stuff.

--- a/Decoder.ipynb
+++ b/Decoder.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/antoniomuso/speech2face/blob/master/NewDecoder.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/antoniomuso/speech2face/blob/master/Decoder.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,7 +39,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,7 +66,7 @@
         "img = vox1_path+\"unzippedFaces\"\n",
         "! pip3 install face_recognition\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +93,7 @@
         "# !wget http://www.robots.ox.ac.uk/~vgg/research/CMBiometrics/data/zippedFaces.tar.gz \n",
         "# !tar zxvf zippedFaces.tar.gz -C \"/content/drive/My Drive/Speech2Face/vox1_dataset/\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +106,62 @@
       "source": [
         "# !curl --user voxceleb1912:0s42xuw6 -o \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" http://www.robots.ox.ac.uk/~vgg/data/voxceleb/vox1a/vox1_test_wav.zip"
       ],
-      "execution_count": 4,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hMbANJDtILvo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import glob\n",
+        "\n",
+        "import numpy as np\n",
+        "import sys\n",
+        "\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "import torch.nn.functional as F\n",
+        "# from torch import nn - should work as well\n",
+        "\n",
+        "from PIL import Image\n",
+        "from torch.utils.data import Dataset\n",
+        "from torch.utils.data import DataLoader\n",
+        "\n",
+        "import  torchvision.transforms as transforms\n",
+        "from torchvision.datasets import ImageFolder\n",
+        "from face_recognition import face_landmarks, face_locations, face_encodings\n",
+        "\n",
+        "import os\n",
+        "from os.path import join\n",
+        "\n",
+        "from tqdm import tqdm\n",
+        "from google.colab.patches import cv2_imshow\n",
+        "import cv2"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NNczRD7DJAaJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Reproducibility stuff\n",
+        "\n",
+        "import random\n",
+        "torch.manual_seed(42)\n",
+        "np.random.seed(42)\n",
+        "random.seed(0)"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,18 +172,6 @@
         "colab": {}
       },
       "source": [
-        "import glob\n",
-        "\n",
-        "import numpy as np\n",
-        "import sys\n",
-        "\n",
-        "from PIL import Image\n",
-        "from torch.utils.data import Dataset\n",
-        "import  torchvision.transforms as transforms\n",
-        "from torchvision.datasets import ImageFolder\n",
-        "from face_recognition import face_landmarks, face_locations, face_encodings\n",
-        "\n",
-        "\n",
         "def load_metadata(data_file_path):\n",
         "    data_list = []\n",
         "    with open(data_file_path, \"r\") as f:\n",
@@ -202,7 +245,7 @@
         "\n",
         "        return face_vectors, image_"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,10 +256,6 @@
         "colab": {}
       },
       "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "\n",
-        "\n",
         "class Vgg_face_dag(nn.Module):\n",
         "\n",
         "    def __init__(self):\n",
@@ -321,7 +360,7 @@
         "        model.load_state_dict(state_dict)\n",
         "    return model"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -332,10 +371,6 @@
         "colab": {}
       },
       "source": [
-        "import torch\n",
-        "import torch.nn.functional as F\n",
-        "from torch import nn\n",
-        "\n",
         "class Generator(nn.Module):\n",
         "    def __init__(self, n_hidden, bottom_width=4, channels=512):\n",
         "        super().__init__()\n",
@@ -363,7 +398,7 @@
         "\n",
         "        return x"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -424,7 +459,7 @@
         "    def __call_(self, phase, img):\n",
         "        return self.data_transform[phase](img)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +474,7 @@
         "outputId": "2ae84fab-1625-413b-b806-d3547dbba3a0"
       },
       "source": [
-        "from torch import nn, optim\n",
+        "# from torch import nn, optim\n",
         "\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "# Set Model\n",
@@ -449,7 +484,7 @@
         "criterion = nn.MSELoss()\n",
         "optimizer = optim.Adam(model.parameters())"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,16 +507,7 @@
         "outputId": "f698b87b-be61-47ca-e1e3-094d80333c6f"
       },
       "source": [
-        "import argparse\n",
-        "import os\n",
-        "from os.path import join\n",
-        "\n",
-        "import torch\n",
-        "from torch.utils.data import DataLoader\n",
-        "from torch import nn, optim\n",
-        "from tqdm import tqdm\n",
-        "from google.colab.patches import cv2_imshow\n",
-        "import cv2\n",
+        "# import argparse\n",
         "\n",
         "\n",
         "#from dataloader import EmbedImagePairs\n",
@@ -599,7 +625,7 @@
         "train(model, trn_dataloader, criterion, optimizer, device, output_dir_name, num_epochs=num_epochs)\n",
         "print(\"Finish training\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
