--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -705,11 +705,11 @@
         "  model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
         "  optimizer.load_state_dict(checkpoint[\"optimizer_state_dict\"])\n",
         "  print(\"Loaded checkpoint, restart epoch is: \", global_ep)\n",
-        "  return global_ep\n",
+        "  return global_ep + 1\n",
         "\n",
         "global_ep = 0\n",
         "if check_path is not None:\n",
-        "  global_ep = _load_checkpoint(check_path)\n",
+        "  global_ep = _load_checkpoint(check_path)  \n",
         "\n",
         "fit(10, datal, model, vgg, optimizer, \"Speech2Face Training\", restart_epoch=global_ep)"
       ],
